Commit con duplicados eliminados

--- a/02_preparacion.ipynb
+++ b/02_preparacion.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "0d2b7c4e",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
        "4                        False                         False  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,6 +447,27 @@
     "#One-hot encoding para equipos\n",
     "datos_preparados = pd.get_dummies(datos_cebollitas, columns=['equipo_local', 'equipo_visitante'])\n",
     "datos_preparados.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eef9f618",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datos preparados sin duplicados: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Eliminar filas duplicadas\n",
+    "datos_preparados.drop_duplicates(inplace=True) \n",
+    "print(\"Datos preparados sin duplicados: \", len(datos_preparados))\n",
+    "\n"
    ]
   }
  ],
