Commit with the dataset preparado without null and duplicated values

--- a/02_preparacion.ipynb
+++ b/02_preparacion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "4be5096a",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "b361987c",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "4                 7                    12    Estadio ML  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "c800c712",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "1ee9d3d2",
    "metadata": {},
    "outputs": [
@@ -197,28 +197,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valores nulos antes de imputacion\n"
+      "Valores nulos antes de imputacion\n",
+      "fecha_partido             0\n",
+      "equipo_local              0\n",
+      "equipo_visitante          0\n",
+      "goles_local               0\n",
+      "goles_visitante           0\n",
+      "posesion_local (%)        0\n",
+      "posesion_visitante (%)    0\n",
+      "tiros_arco_local          0\n",
+      "tiros_arco_visitante      0\n",
+      "estadio                   0\n",
+      "dtype: int64\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "fecha_partido             0\n",
-       "equipo_local              0\n",
-       "equipo_visitante          0\n",
-       "goles_local               0\n",
-       "goles_visitante           0\n",
-       "posesion_local (%)        0\n",
-       "posesion_visitante (%)    0\n",
-       "tiros_arco_local          0\n",
-       "tiros_arco_visitante      0\n",
-       "estadio                   0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -227,12 +218,12 @@
     "# Eliminar filas con datos faltantes\n",
     "datos_cebollitas['goles_local'] = datos_cebollitas['goles_local'].fillna(datos_cebollitas['goles_local'].mean())\n",
     "print(\"Valores nulos antes de imputacion\")\n",
-    "datos_cebollitas.isnull().sum()"
+    "print(datos_cebollitas.isnull().sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "0d2b7c4e",
    "metadata": {},
    "outputs": [
@@ -438,7 +429,7 @@
        "4                        False                         False  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "eef9f618",
    "metadata": {},
    "outputs": [
@@ -459,7 +450,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Datos preparados sin duplicados: 100\n"
+      "Datos preparados sin duplicados:  100\n"
      ]
     }
    ],
@@ -468,6 +459,38 @@
     "datos_preparados.drop_duplicates(inplace=True) \n",
     "print(\"Datos preparados sin duplicados: \", len(datos_preparados))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8d6b5aa2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fechas inválidas (NaT) luego de conversion\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Manejar fechas\n",
+    "datos_preparados['fecha_partido'] = pd.to_datetime(datos_preparados['fecha_partido'], errors='coerce')\n",
+    "print(\"Fechas inválidas (NaT) luego de conversion\")\n",
+    "print(datos_preparados['fecha_partido'].isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a365456",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(datos_preparados.info())"
    ]
   }
  ],
